# ecoindex_cli

./: .coveragerc  .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  config.yml
.github/config/: changelog.json  pr-labeler.yml
.github/workflows/: auto-merge.yml  changelog.yml  codeQL.yml  combine-prs.yml  docker-hub.yml  pr-labeler.yml  publish.yml  quality.yml
api/: api.py  spec.json
ecoindex_cli/: arguments_handler.py  crawl.py  enums.py  files.py  logger.py  models.py  recursive.py  scrap.py  validator.py  validators.py
ecoindex_cli/cli/: app.py  arguments_handler.py  console_output.py  helper.py
ecoindex_cli/report/: report.py  template.html
ecoindex_cli/report/translations/: en.yml  fr.yml
scripts/: download_chrome.py
tests/: test_cli.py  test_ecoindex_cli.py
tests/ecoindex_cli/: test_arguments_handler.py  test_models.py  test_validators.py
tests/ecoindex_cli/cli/: test_app.py  test_arguments_handler.py
