[tool.poetry]
name = "ecoindex-cli"
version = "2.17.0"
description = "`ecoindex-cli` is a CLI tool that let you make ecoindex tests on given pages"
authors = ["Vincent Vatelot <vincent.vatelot@ik.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.ecoindex.fr"
repository = "https://github.com/cnumr/ecoindex_cli"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
ecoindex-cli = "ecoindex_cli.cli.app:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.3.2,<0.8.0"
pandas = "^1.3.3"
Jinja2 = "^3.0.1"
matplotlib = "^3.4.3"
click-spinner = "^0.1.10"
pydantic = "^1.10.2"
Scrapy = "^2.5.0"
ecoindex-scraper = {version = "^2.15.0", allow-prereleases = true}
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = {version = "^23.1", allow-prereleases = true}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
