[tool.poetry]
name = "ecoindex-cli"
version = "2.23.0"
description = "`ecoindex-cli` is a CLI tool that let you make ecoindex tests on given pages"
authors = ["Vincent Vatelot <vincent.vatelot@ik.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.ecoindex.fr"
repository = "https://github.com/cnumr/ecoindex_cli"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
ecoindex-cli = "ecoindex_cli.cli.app:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = ">=0.7,<0.10"}
pandas = ">=1.3.3,<3.0.0"
Jinja2 = "^3.0.1"
matplotlib = "^3.4.3"
click-spinner = "^0.1.10"
pydantic = "^1.10.2"
Scrapy = "^2.5.0"
ecoindex-scraper = "^3.6.0"
PyYAML = "^6.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.1"
pytest = "^7.4"
black = {version = "^23.7", allow-prereleases = true}
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
